--- a/ecom/apps/core/templates/base.html
+++ b/ecom/apps/core/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,6 +7,7 @@
         <title>{% block title %}{% endblock title %} Ecom</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <link rel="stylesheet" href="{% static 'main.css' %}">
     </head>
 
     <body>
@@ -27,8 +29,8 @@
                         <a href="{% url 'category_detail' category.slug %}" 
                             class="navbar-item">{{ category.title }}</a>
                     {% endfor %} 
-                    <div class="navbar-item">
-                        <a href="{% url 'cart' %}" class="button is-primary">Cart</a> 
+                    <div class="navbar-item" id="navbarapp">
+                        <a href="{% url 'cart' %}" class="button is-primary">Cart ([[ numItems ]])</a> 
                     </div>
                 </div>
             </div>
@@ -52,8 +54,35 @@
             </div>
         </footer>
 
+        <script src="https://unpkg.com/vuex@3.5.1/dist/vuex.js"></script>
+        <script>
+            var store = new Vuex.Store({
+                state: {
+                    numItems: {{ cart.get_total_length }},
+                    totalCost: {{ cart.get_total_cost }}
+                },
+                mutations: {
+                    increment(state, quantity) {
+                        state.numItems += quantity;
+                    },
+                    changeTotalCost(state, newCost) {
+                        state.totalCost += newCost;
+                    }
+                }
+            });
+            var navbarapp = new Vue({
+                el: '#navbarapp',
+                delimiters: ['[[', ']]'],
+                store: store,
+                computed: {
+                    numItems: function() { return store.state.numItems }
+                }
+            });
+        </script>
+
         {% block scripts %}
 
         {% endblock scripts %}
+
     </body>
 </html>
