--- a/ecom/apps/cart/templates/cart.html
+++ b/ecom/apps/cart/templates/cart.html
@@ -37,6 +37,50 @@
                     </tfoot>
                 </table>
             </div>
+
+            <form v-on:submit.prevent="submitForm()">
+                <div class="field">
+                    <div class="control">
+                        <label>First name</label>
+                        <input type="text" name="first_name" v-model="first_name">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label>Last name</label>
+                        <input type="text" name="last_name" v-model="last_name">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label>Email</label>
+                        <input type="text" name="email" v-model="email">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label>Address</label>
+                        <input type="text" name="address" v-model="address">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label>Zip code</label>
+                        <input type="text" name="zipcode" v-model="zipcode">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label>Place</label>
+                        <input type="text" name="place" v-model="place">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-primary">Check out</button>
+                    </div>
+                </div>
+            </form>
         {% else %}  
             <p>Your cart is empty!</p>
         {% endif %}
@@ -51,6 +95,12 @@
         store: store,
         data () {
             return {
+                first_name: '',
+                last_name: '',
+                email: '',
+                address: '',
+                zipcode: '',
+                place: '',
                 products: [{{ productsstring|safe }}]
             }
         },
@@ -59,6 +109,33 @@
             totalCost: function() { return store.state.totalCost }
         },
         methods: {
+            submitForm() {
+                var data = {
+                    first_name: this.first_name,
+                    last_name: this.last_name,
+                    email: this.email,
+                    address: this.address,
+                    zipcode: this.zipcode,
+                    place: this.place,
+                };
+                
+                fetch('/api/checkout/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': '{{ csrf_token }}',
+                    },
+                    credentials: 'same-origin',
+                    body: JSON.stringify(data)
+                })
+                .then((response) => {
+                    console.log(response)
+                    console.log("SUCESS")
+                })
+                .catch((error) => {
+                    console.log('Error ', error )
+                })
+            },
             // TODO: allakse to an xreiastei se update quantity
             incrementQuantity(product_id, quantity, price) {
                 var data = {
@@ -144,6 +221,7 @@
                 })
                 .then((response) => {
                     console.log('Removed from cart')
+                    // TODO: remove from store
                     this.products = this.products.filter(product => product.id !== product_id)
                 })
                 .catch((error) => {
