--- a/ecom/apps/cart/templates/cart.html
+++ b/ecom/apps/cart/templates/cart.html
@@ -6,7 +6,7 @@
     <div id="cartapp">
         <h1 class="title"> Cart</h1>
         
-        {% if cart %}
+        <div v-if="products.length > 0">
             <div class="table">
                 <table class="table">
                     <thead>
@@ -38,56 +38,59 @@
                 </table>
             </div>
 
-            <form v-on:submit.prevent="submitForm()">
-                <div class="field">
+            <form v-on:submit.prevent>
+                <div class="field column is-4">
                     <div class="control">
                         <label>First name</label>
-                        <input type="text" name="first_name" v-model="first_name">
+                        <input type="text" name="first_name" v-model="first_name" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
                     </div>
                 </div>
-                <div class="field">
+                <div class="field column is-4">
                     <div class="control">
                         <label>Last name</label>
-                        <input type="text" name="last_name" v-model="last_name">
+                        <input type="text" name="last_name" v-model="last_name" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
                     </div>
                 </div>
-                <div class="field">
+                <div class="field column is-4">
                     <div class="control">
                         <label>Email</label>
-                        <input type="text" name="email" v-model="email">
+                        <input type="text" name="email" v-model="email" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
                     </div>
                 </div>
-                <div class="field">
+                <div class="field column is-4">
                     <div class="control">
                         <label>Address</label>
-                        <input type="text" name="address" v-model="address">
+                        <input type="text" name="address" v-model="address" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
                     </div>
                 </div>
-                <div class="field">
+                <div class="field column is-4">
                     <div class="control">
                         <label>Zip code</label>
-                        <input type="text" name="zipcode" v-model="zipcode">
+                        <input type="text" name="zipcode" v-model="zipcode" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
                     </div>
                 </div>
-                <div class="field">
+                <div class="field column is-4">
                     <div class="control">
                         <label>Place</label>
-                        <input type="text" name="place" v-model="place">
+                        <input type="text" name="place" v-model="place" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
-                        <button class="button is-primary">Check out</button>
+                        <button @click="buy()" class="button is-primary">Checkout</button>
                     </div>
                 </div>
             </form>
-        {% else %}  
-            <p>Your cart is empty!</p>
-        {% endif %}
+        </div>
+        <p v-else="">Your cart is empty!</p>
+        {% comment %} <div v-if="errors.length > 0" v-for="error in errors"> {% endcomment %}
+        <div v-if="errors.length > 0" class="notification is-danger is-light">Please fill in all the reruired fields!</div>
+        {% comment %} </div> {% endcomment %}
     </div>
 {% endblock content %}
 
 {% block scripts %}
+<script type="application/javascript" src="https://js.stripe.com/v3/"></script>
 <script>
     var productapp = new Vue({
         el: '#cartapp',
@@ -95,6 +98,7 @@
         store: store,
         data () {
             return {
+                errors: [],
                 first_name: '',
                 last_name: '',
                 email: '',
@@ -109,6 +113,55 @@
             totalCost: function() { return store.state.totalCost }
         },
         methods: {
+            buy() {
+                var data = {
+                    first_name: this.first_name,
+                    last_name: this.last_name,
+                    email: this.email,
+                    address: this.address,
+                    zipcode: this.zipcode,
+                    place: this.place,
+                };
+
+                this.errors = [];
+                
+                for (var key of Object.keys(data)) {
+                    if (data[key] === '') {
+                        this.errors.push(key)
+                    }
+                }
+                console.log(this.errors)
+
+                if (this.errors.length != 0) {
+                    return
+                }
+            
+                var stripe = Stripe('{{ pub_key }}');
+
+                fetch('/api/create_checkout_session/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': '{{ csrf_token }}',
+                    },
+                    credentials: 'same-origin',
+                    body: JSON.stringify(data)
+                })
+                .then((response) => {
+                    return response.json()
+                })
+                .then((session) => {
+                    return stripe.redirectToCheckout({ sessionId: session.session.id })
+                })
+                .then((result) => {
+                    if (result.error) {
+                        alert(result.error.message)
+                    }
+                })
+                .catch((error) => {
+                    console.log('Error ', error )
+                })
+            },
             submitForm() {
                 var data = {
                     first_name: this.first_name,
@@ -129,8 +182,8 @@
                     body: JSON.stringify(data)
                 })
                 .then((response) => {
-                    console.log(response)
                     console.log("SUCESS")
+                    window.location.href = '/'
                 })
                 .catch((error) => {
                     console.log('Error ', error )
@@ -145,7 +198,7 @@
                 }
 
                 store.commit('increment', 1)
-                store.commit('changeTotalCost', parseFloat(price))
+                store.commit('incrementTotalCost', parseFloat(price))
 
                 fetch('/api/add_to_cart/', {
                     method: 'POST',
@@ -178,8 +231,13 @@
                     'quantity': parseInt(quantity) - 1
                 }
 
-                store.commit('increment', -1)
-                store.commit('changeTotalCost', parseFloat(price))
+                store.commit('decrement', 1)
+                store.commit('decrementTotalCost', parseFloat(price))
+
+                if (data['quantity'] === 0) {
+                    this.removeFromCart(product_id)
+                    return
+                }
 
                 fetch('/api/add_to_cart/', {
                     method: 'POST',
