--- a/ecom/apps/store/templates/category_detail.html
+++ b/ecom/apps/store/templates/category_detail.html
@@ -10,6 +10,11 @@
         {% for product in products %}
         <div class="column is-3">
             <div class="card">
+                {% comment %} <div class="card-image">
+                    <figure class="image">
+                        <img src="{{ product.thumbnail.url }}">
+                    </figure>
+                </div> {% endcomment %}
                 <div class="card-content">
                     <div class="media">
                         <div class='media-content'>
