--- a/ecom/apps/cart/templates/cart.html
+++ b/ecom/apps/cart/templates/cart.html
@@ -10,6 +10,7 @@
             <div class="table">
                 <table class="table">
                     <thead>
+                        <th></th>
                         <th>Product</th>
                         <th>Quantity</th>
                         <th>Price</th>
@@ -17,7 +18,10 @@
                     </thead>
                     <tbody>
                         <tr v-for="product in products">
-                            <td>[[ product.title ]]</td>
+                            <td>
+                                <figure class="image is-48x48"><img :src="product.thumbnail"></figure>
+                            </td>
+                            <td><a :href="product.url">[[ product.title ]]</a></td>
                             <td>[[ product.quantity ]]
                                 <button @click="incrementQuantity(product.id, product.quantity, product.price)">+</button>
                                 <button @click="decrementQuantity(product.id, product.quantity, product.price)">-</button>
