--- a/ecom/apps/store/templates/product_detail.html
+++ b/ecom/apps/store/templates/product_detail.html
@@ -4,7 +4,15 @@
 
 {% block content %}
     <div id="productapp">
-        <img src="{{ product.image.url }}" alt="">
+        <img :src="mainImage">
+        <hr>
+        <div class="columns">
+            <div class="column is-2" v-for="image in images">
+                <figure class="image is-128x128">
+                    <img :src="image.thumbnail" @click="changeMainImage(image.image)">
+                </figure>
+            </div>
+        </div>
         <hr>
         <h1 class="title">{{ product.title }}</h1>
         <h2 class="subtitle">€{{ product.price }}</h2>
@@ -30,10 +38,15 @@
         store: store,
         data () {
             return {
-                showMessage: false
+                showMessage: false,
+                mainImage: '{{ product.image.url }}',
+                images: [{{ imagesstring|safe }}]
             }
         },
         methods: {
+            changeMainImage(image){
+                this.mainImage = image
+            },
             addToCart(product_id) {
                 console.log(product_id)
 
