--- a/ecom/apps/cart/templates/cart.html
+++ b/ecom/apps/cart/templates/cart.html
@@ -47,42 +47,50 @@
             </div>
 
             <div class=" column is-4">
-                    <input type="hidden" class="input" type="text" v-model="coupon_value"><br>
-                    Coupon code:<br>
-                    <input class="input" type="text" v-model="coupon_code"><br>
-                    <button @click="applyCoupon()">Apply</button>
-                    <hr>
-                </div>
-                
+                <input type="hidden" class="input" type="text" v-model="coupon_value"><br>
+                Coupon code:<br>
+                <input class="input" type="text" v-model="coupon_code"><br>
+                <button @click="applyCoupon()">Apply</button>
+                <hr>
+            </div>
+
+            {% if not request.user.is_authenticated %}
+                <p>Continue as guest or
+                    <a href="{% url 'login' %}">log in</a> / 
+                    <a href="{% url 'signup' %}">sign up</a>.
+                </p>
+                <hr>
+            {% endif %} 
+
             <form v-on:submit.prevent>
                 <div class="field column is-4">
                     <div class="control">
                         <label>First name</label>
-                        <input type="text" name="first_name" v-model="first_name" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
+                        <input type="text" name="first_name" v-model="first_name" class="input" v-bind:class="{ 'is-danger' : errors.includes('first_name') }">
                     </div>
                 </div>
                 <div class="field column is-4">
                     <div class="control">
                         <label>Last name</label>
-                        <input type="text" name="last_name" v-model="last_name" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
+                        <input type="text" name="last_name" v-model="last_name" class="input" v-bind:class="{ 'is-danger' : errors.includes('last_name') }">
                     </div>
                 </div>
                 <div class="field column is-4">
                     <div class="control">
                         <label>Email</label>
-                        <input type="text" name="email" v-model="email" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
+                        <input type="text" name="email" v-model="email" class="input" v-bind:class="{ 'is-danger' : errors.includes('email') }">
                     </div>
                 </div>
                 <div class="field column is-4">
                     <div class="control">
                         <label>Address</label>
-                        <input type="text" name="address" v-model="address" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
+                        <input type="text" name="address" v-model="address" class="input" v-bind:class="{ 'is-danger' : errors.includes('address') }">
                     </div>
                 </div>
                 <div class="field column is-4">
                     <div class="control">
                         <label>Zip code</label>
-                        <input type="text" name="zipcode" v-model="zipcode" class="input" v-bind:class="{ 'is-danger' : errors.includes('place') }">
+                        <input type="text" name="zipcode" v-model="zipcode" class="input" v-bind:class="{ 'is-danger' : errors.includes('zipcode') }">
                     </div>
                 </div>
                 <div class="field column is-4">
@@ -113,9 +121,9 @@
         data () {
             return {
                 errors: [],
-                first_name: '',
-                last_name: '',
-                email: '',
+                first_name: '{{ first_name }}',
+                last_name: '{{ last_name }}',
+                email: '{{ email }}',
                 address: '',
                 zipcode: '',
                 place: '',
@@ -168,11 +176,11 @@
                 this.errors = [];
                 
                 for (var key of Object.keys(data)) {
-                    if (data[key] === '') {
+                    if ((data[key] === '') & key != 'coupon_code') {
                         this.errors.push(key)
                     }
                 }
-                console.log(this.errors)
+                console.log("ERRORS: ",this.errors)
 
                 if (this.errors.length != 0) {
                     return
