--- a/ecom/apps/store/templates/product_detail.html
+++ b/ecom/apps/store/templates/product_detail.html
@@ -5,14 +5,16 @@
 {% block content %}
     <div id="productapp">
         <img :src="mainImage">
-        <hr>
-        <div class="columns">
-            <div class="column is-2" v-for="image in images">
-                <figure class="image is-128x128">
-                    <img :src="image.thumbnail" @click="changeMainImage(image.image)">
-                </figure>
+        {% if product.images.all %}
+            <hr>
+            <div class="columns">
+                <div class="column is-2" v-for="image in images">
+                    <figure class="image is-128x128">
+                        <img :src="image.thumbnail" @click="changeMainImage(image.image)">
+                    </figure>
+                </div>
             </div>
-        </div>
+        {% endif %}
         <hr>
         <h1 class="title">{{ product.title }}</h1>
         <h2 class="subtitle">€{{ product.price }}</h2>
@@ -21,14 +23,84 @@
             <p>{{ product.description }}</p>
         {% endif %}
 
-        {% if product.in_cart %}
-            <p>Already in cart!</p>
+        {% if product.variants.all %}
+            <h2 class="subtitle">Add to cart</h2>
+            <div class="columns">
+                <div class="column is-6">
+                    <table class="table is-fullwidth">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <figure class="image is-48x48">
+                                        {% if product.thumbnail.url %}
+                                            <img src="{{ product.thumbnail.url }}" alt="">
+                                        {% endif %}
+                                    </figure>
+                                </td>
+                                <td>
+                                    {{ product.title }}
+                                </td>
+                                <td>
+                                    {% if product.in_cart %}
+                                        <p>Already in cart!</p>
+                                    {% else %}
+                                        {% if product.num_available > 0 %}
+                                        <!-- TODO: check if the product is availabe -->
+                                        <button @click="addToCart({{ product.id }})"
+                                            class="button is-success"
+                                            >Add to cart</button>
+                                        {% else %}
+                                        <p>The product is out of stock!</p>
+                                        {% endif %}
+                                    {% endif %}
+                                </td>
+                            </tr>
+
+                            {% for variant in product.variants.all %}
+                                <tr>
+                                    <td>
+                                        <figure class="image is-48x48">
+                                            {% if variant.thumbnail.url %}
+                                                <img src="{{ variant.thumbnail.url }}" alt="">
+                                            {% endif %}
+                                        </figure>
+                                    </td>
+                                    <td>
+                                        {{ variant.title }}
+                                    </td>
+                                    <td>
+                                        {% if variant.in_cart %}
+                                            <p>Already in cart!</p>
+                                        {% else %}
+                                            {% if variant.num_available > 0 %}
+                                            <!-- TODO: check if the variant is availabe -->
+                                            <button @click="addToCart({{ variant.id }})"
+                                                class="button is-success"
+                                                >Add to cart</button>
+                                            {% else %}
+                                            <p>The product is out of stock!</p>
+                                            {% endif %}
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         {% else %}
-            {% if product.num_available > 0 %}
-            <!-- TODO: check if the product is availabe -->
-            <button @click="addToCart({{ product.id }})">Add to cart</button>
+            {% if product.in_cart %}
+                <p>Already in cart!</p>
             {% else %}
-            <p>The product is out of stock!</p>
+                {% if product.num_available > 0 %}
+                <!-- TODO: check if the product is availabe -->
+                <button @click="addToCart({{ product.id }})"
+                    class="button is-success"
+                    >Add to cart</button>
+                {% else %}
+                <p>The product is out of stock!</p>
+                {% endif %}
             {% endif %}
         {% endif %}
 
