--- a/ecom/apps/userprofile/templates/login.html
+++ b/ecom/apps/userprofile/templates/login.html
@@ -1,18 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="tittle">Log in</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
+    <div class="columns">
+        <div class="column is-6 is-offset-3">
+            <h1 class="title">Log in</h1>
+            <form method="post" action=".">
+                {% csrf_token %}
 
-        {{ form.as_p }}
+                <input type="hidden" name="next" value="{{ next }}">
 
-        <div class="field">
-            <div class="control">
-                <button class="button is-success">
-                    Log in
-                </button>
-            </div>
+                <div class="field">
+                    <label>Username</label>
+                    <div class="control">
+                        <input type="text" class="input" name="username" id="id_username">
+                    </div>
+                </div>
+
+                <div class="field">
+                    <label>Password</label>
+                    <div class="control">
+                        <input type="password" class="input" name="password" id="id_password">
+                    </div>
+                </div>
+
+                {% if form.errors %}
+                    <div class="notification is-danger">
+                        <p>Your username and password do not match! Please try again.</p>
+                    </div>
+                {% endif %}
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-success">
+                            Log in
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
 {% endblock content %}
