--- a/ecom/apps/userprofile/templates/signup.html
+++ b/ecom/apps/userprofile/templates/signup.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="tittle">Sign up</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
+    <div class="columns">
+        <div class="column is-6 is-offset-3">
+            <h1 class="title">Sign up</h1>
+            <form method="post" action=".">
+                {% csrf_token %}
 
-        {{ form.as_p }}
+                {{ form.as_p }}
 
-        <div class="field">
-            <div class="control">
-                <button class="button is-success">
-                    Sign up
-                </button>
-            </div>
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-success">Sign up</button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
 {% endblock content %}
