--- a/ecom/apps/core/templates/base.html
+++ b/ecom/apps/core/templates/base.html
@@ -68,6 +68,8 @@
             {% endblock %}
         </section>
 
+        {% include 'parts/newsletter.html' %}
+
         <footer class="footer">
             <div class="columns">
                 <div class="column is-4">
