--- a/ecom/apps/userprofile/templates/myaccount.html
+++ b/ecom/apps/userprofile/templates/myaccount.html
@@ -9,6 +9,10 @@
 
     <p><strong>Name: </strong> {{ request.user.get_full_name }} </p>
     <p><strong>E-mail: </strong> {{ request.user.email }} </p>
+    <p><strong>Address: </strong> {{ request.user.userprofile.address }} </p>
+    <p><strong>Zipcode: </strong> {{ request.user.userprofile.zipcode }} </p>
+    <p><strong>Place: </strong> {{ request.user.userprofile.place }} </p>
+    <p><strong>Phone: </strong> {{ request.user.userprofile.phone }} </p>
 
     <hr>
 
