--- a/ecom/apps/userprofile/templates/signup.html
+++ b/ecom/apps/userprofile/templates/signup.html
@@ -9,6 +9,8 @@
 
                 {{ form.as_p }}
 
+                {{ userprofileform.as_p }}
+
                 <div class="field">
                     <div class="control">
                         <button class="button is-success">Sign up</button>
