--- a/ecom/apps/store/templates/product_detail.html
+++ b/ecom/apps/store/templates/product_detail.html
@@ -4,6 +4,18 @@
 
 {% block content %}
     <div id="productapp">
+
+        <nav class="breadcrumb" aria-label="breadcrumbs">
+            <ul>
+                <li><a href="{% url 'frontpage' %}">Home</a></li>
+                {% if product.category.parent %}
+                    <li><a href="{% url 'category_detail' product.category.parent.slug %}">{{ product.category.parent.title }}</a></li>
+                {% endif %}
+                <li><a href="{% url 'category_detail' product.category.slug %}">{{ product.category.title }}</a></li>
+                <li class="is-active"><a href="{% url 'product_detail' product.category.slug product.slug %}">{{ product.title }}</a></li>
+            </ul>
+        </nav>
+
         <img :src="mainImage">
         {% if product.images.all %}
             <hr>
